kustomize/instances/overlays/frontend/hipstershop/istio/hipstershop-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hipstershop-vs
spec:
  gateways:
  - hipstershop-gateway
  hosts:
  - '*'
  http:
  - route:
    - destination: 
        host: frontend
        port:
          number: 80
