kustomize/instances/overlays/frontend/hipstershop/istio/recommendationservice-delay.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: recommendationservice-delay
spec:
  hosts:
  - recommendationservice
  http:
  - route:
    - destination:
        host: recommendationservice
  - fault:
    delay:
      percentage:
        value: 100
      fixedDelay: 5s
